| Summary: | ASTERISK-25020: Mismatched response to outgoing REGISTER request | ||
| Reporter: | Mark Michelson (mmichelson) | Labels: | |
| Date Opened: | 2015-04-27 12:32:52 | Date Closed: | 2015-05-08 14:01:16 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | 13.1.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) Fatal_404_response | |
| Description: | Internal testing at Digium encountered a situation where some mysterious happenings occurred regarding an outbound REGISTER. The logs show an outbound REGISTER occurring, then receiving a 401 response to the REGISTER. After this, there are a series of incoming REGISTER transactions and outbound OPTIONS transactions. And at the very end, there is an error message showing that the outbound registration failed due to a fatal 404 response being received.
The logs show no such 404 response being received in response to the outbound REGISTER. What's odd, though, is that immediately before the warning is printed, there is a 404 received in response to an outbound OPTIONS request. Based on the limited debugging, the conclusion may be that somehow, the 404 response to the OPTIONS request somehow got treated as a response to a REGISTER. | ||
| Comments: | By: Mark Michelson (mmichelson) 2015-04-27 12:39:14.333-0500 I am attaching Fatal_404_response to the issue. This is the log accompanying the issue. I have anonymized the file by replacing all IP addresses with "ip_addr". These shouldn't have any bearing on the actual issue, so for now I'm not trying to differentiate between different ones. If it becomes problematic, I can re-anonymize them but differentiate between the IP addresses involved. | ||